# docs/swagger.json
@@ -4,6 +4,37 @@
         "contact": {}
     },
     "paths": {
+        "/getProfile": {
+            "get": {
+                "description": "login endpoint",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Profile"
+                ],
+                "summary": "ping example",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "data search by fullname",
+                        "name": "fullname",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/login": {
             "post": {
                 "description": "login endpoint",
@@ -14,7 +45,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "example"
+                    "Auth"
                 ],
                 "summary": "ping example",
                 "parameters": [
@@ -48,7 +79,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "example"
+                    "Auth"
                 ],
                 "summary": "ping example",
                 "parameters": [
